--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:ems="10"
         android:hint="Ingrese su usuario"
         android:inputType="textPersonName"
-        android:text="cesar" />
+        android:text="carlos" />
 
     <EditText
         android:id="@+id/edClave"
